# wikiget

./: .git-blame-ignore-revs  .gitignore  .travis.yml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  wikiget.1  wikiget.1.md
.github/: FUNDING.yml
.github/workflows/: python-test.yml  python.yml
docs/: Makefile  wikiget.1  wikiget.1.md
src/wikiget/: __init__.py  __main__.py  client.py  dl.py  exceptions.py  file.py  logging.py  parse.py  validations.py  version.py  wikiget.py
test/: test_validations.py  test_wikiget.py
tests/: conftest.py  test_client.py  test_dl.py  test_file_class.py  test_logging.py  test_parse.py  test_validations.py  test_wikiget.py  test_wikiget_cli.py
wikiget/: __init__.py  dl.py  validations.py  version.py  wikiget.py
