[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
#requires = ["hatchling"]
#build-backend = "hatchling.build"
#requires = ["pdm-backend"]
#build-backend = "pdm.backend"

[project]
name = "wikiget"
dynamic = ["version"]
description = "CLI tool for downloading files from MediaWiki sites"
readme = "README.md"
authors = [
    {name = "Cody Logan", email = "clpo13@gmail.com"}
]
requires-python = ">=3.7"
license = {text = "GPL-3.0-or-later"}
keywords = ["commons", "mediawiki", "wikimedia", "wikipedia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mwclient>=0.10.0",
    "requests",
    "tqdm",
]

[project.urls]
Repository = "https://github.com/clpo13/wikiget"
"Bug Reports" = "https://github.com/clpo13/wikiget/issues"

[project.scripts]
wikiget = "wikiget.wikiget:main"

[tool.setuptools.dynamic]
version = {attr = "wikiget.version.__version__"}

#[tool.hatch.version]
#path = "src/wikiget/version.py"

#[tool.pdm]
#version = { source = "file", path = "src/wikiget/version.py" }

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=wikiget",
]
testpaths = ["test"]
